examples/test/testpolicy9969.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9969
  namespace: namespace370
spec:
  podSelector:
    matchLabels:
      key4: value9
      key34: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value49
          key1: value11
      podSelector:
        matchLabels:
          key22: value32
